--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -1405,6 +1405,8 @@ items:
             href: rooms/standards-and-room-planner.md
       - name: Устройства
         items:
+          - name: Магазин устройств Teams
+            href: devices/device-store.md
           - name: Развертывание
             items:
               - name: Развертывание телефонов Teams и дисплеев Teams с помощью Intune
@@ -1473,7 +1475,7 @@ items:
             href: /skypeforbusiness/certification/devices-meeting-rooms?toc=/MicrosoftTeams/toc.json&bc=/microsoftteams/breadcrumb/toc.json
           - name: Планирование развертывания телефонов и дисплеев
             href: devices/plan-device-deployment.md
-  - name: 'Управление приложениями, ботами и соединителями в Teams'
+  - name: Управление приложениями
     items:
       - name: Обзор
         href: deploy-apps-microsoft-teams-landing-page.md
@@ -1501,8 +1503,6 @@ items:
         href: /microsoftteams/platform/samples/app-templates?bc=%2fmicrosoftteams%2fbreadcrumb%2ftoc.json&toc=%2fMicrosoftTeams%2ftoc.json
       - name: Управление пользовательскими бизнес-приложениями
         items:
-          - name: Интеграция с Power Platform
-            href: teams-power-platfom-integration.md
           - name: Управление приложениями Power Platform в Центре администрирования Microsoft Teams
             href: manage-power-platform-apps.md
           - name: Публикация пользовательских приложений в магазине вашей организации
