--- a/Teams/Tutorial-Meetings-in-Teams.yml
+++ b/Teams/Tutorial-Meetings-in-Teams.yml
@@ -20,12 +20,12 @@ metadata:
   - Teams_ITAdmin_RemoteWorkers
   appliesto:
   - Microsoft Teams
-  ms.openlocfilehash: 1737461b1eface3038957a862ab2bcb743ca4615
-  ms.sourcegitcommit: eb5fadedacbf4651ed5b05f1b0d6abf57e9eda2d
+  ms.openlocfilehash: 0a8f7affd933fbe8661609e90fa934a8597e4d3a
+  ms.sourcegitcommit: a77116a0b0fd7e3cf14de694c559338bea198851
   ms.translationtype: MT
   ms.contentlocale: ru-RU
-  ms.lasthandoff: 02/25/2022
-  ms.locfileid: "62960061"
+  ms.lasthandoff: 04/03/2022
+  ms.locfileid: "64628343"
 items:
 - durationInMinutes: 1
   content: >
@@ -108,9 +108,9 @@ items:
 
     2.  Отправьте нам отзыв:
         - Оставьте сообщение в разделе комментариев внизу этой страницы.
-        - Чтобы предоставить нам Teams продукта или запросить новую функцию, перейдите на портал [Teams отзывов](https://feedbackportal.microsoft.com/feedback/forum/ad198462-1c1c-ec11-b6e7-0022481f8472).
+        - Чтобы предоставить нам Teams отзыв о продукте или запросить новую функцию, перейдите на [портал Teams отзывов](https://feedbackportal.microsoft.com/feedback/forum/ad198462-1c1c-ec11-b6e7-0022481f8472).
     3.  Будьте в курсе событий
         - Подпишитесь на [блог Teams](https://aka.ms/teamsblog).
         - Ознакомьтесь с [дорожной картой](https://aka.ms/O365Roadmap) Teams.
         - Сведения о последних выпущенных компонентах см. в [Заметках о выпуске](https://support.office.com/article/what-s-new-in-microsoft-teams-d7092a6d-c896-424c-b362-a472d5f105de)
-    4.  Посмотрите [другие обучающие курсы и материалы](/OfficeDocs-SkypeForBusiness-pr/blob/master/Teams/ITAdmin-readiness#technical-training).
+    4.  Посмотрите [другие обучающие курсы и материалы](/microsoftteams/ITAdmin-readiness#technical-training).
