--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -1567,6 +1567,8 @@ items:
                 href: expand-teams-across-your-org/browser-join.md
               - name: Отчет об использовании виртуальных визитов
                 href: teams-analytics-and-reports/virtual-visits-usage-report.md
+              - name: Помогите своим клиентам использовать виртуальные встречи
+                href: expand-teams-across-your-org/virtual-appointments-toolkit.md
           - name: '"Смены" для Teams'
             items:
               - name: Начало работы с приложением "Смены"
